test/files/neg/interop_typetags_arenot_classmanifests.check
interop_typetags_arenot_classmanifests.scala:5: error: No ClassManifest available for T.
    println(classManifest[T])
                         ^
one error found
